--- a/css/body.css
+++ b/css/body.css
@@ -5,27 +5,27 @@
     margin: 0px;
     padding: 0px;
 }
+
 /*
 *{ 
-    box-shadow: 0px 0px 1px red;
+    box-shadow: 0px 0px 0px 1px black;
 }
 */
 
-html p{
-    margin: 0px;
-    padding: 0px;
-}
+
 
                     /*Global*/
 body {
-    background-color: brown;
+    background-color: #999999;
     box-sizing: border-box;
     font-family: "poppins", sans-serif !important;
     cursor: default;
 }
 
-
-
+body p{
+    margin: 0px;
+    padding: 0px;
+}
                     /*Nav*/
 
 
@@ -60,7 +60,8 @@ body {
 .cover_img{
     width: 100%;
     height: 400px;
-    background :url("../images/cover.jpg");
+    background-color: #eee;
+/*    background :url("../images/cover.jpg");*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -78,19 +79,23 @@ body {
 .card_container{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
-    border: 5px solid #663399;
-    padding :30px 30px 0px;
-    border-radius: 10px; 
-    width: 300px;
-    box-shadow: 0px 0px 15px #000;
-    background-color: rgba(0,0,0,0.6);
+/*    border: 5px solid #663399;*/
+/*    padding :20px;*/
+/*    border-radius: 10px; */
+    width: 100%;
+    height: 100%;
+/*    box-shadow: 0px 0px 15px #000;*/
+    background-color: rgba(0,0,0,0.8);
 }
 
 .card_container h1{
 /*    font-weight: 700;*/
+    margin: 20px 0px;
+    padding: 0px;
     font-family: "lobster", sans-serif;
-    line-height: 1.6;
+/*    line-height: 1.5;*/
 /*    letter-spacing: 2px;*/
     color: #fff;
     
@@ -112,7 +117,7 @@ body {
     justify-content: center;
     align-items: center;
     align-self: center;
-    background-color: #663399;
+    background-color: #1EA075;
     border: 0px;
     height: 40px;
     width: 160px;
@@ -125,7 +130,7 @@ body {
 }
 .get_started:hover{
     transition: 200ms all ease-out;
-    width: 340px;
+    width: 190px;
 }
 
 
@@ -244,7 +249,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 10px;
+/*    padding: 10px;*/
     height: 70px;
 }
 
@@ -254,11 +259,11 @@ body {
     height: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #663399;
+    background-color: #1EA075;
 }
 
 .tab .input {
-    border: 8px solid #663399;
+    border: 8px solid #1EA075;
     width: 50%;
     padding-left: 7px;
 }
@@ -319,7 +324,7 @@ body {
     width:  140px;
     height: 180px;
     background-color: #fff;
-    border-radius: 6px ;
+    border-radius: 2px ;
     box-shadow: 0px 0px 10px darkgray; 
     flex-direction: column;
     overflow: hidden;
@@ -349,7 +354,7 @@ body {
 
 .thumbs:hover{
     transform: scale(1.05);
-    box-shadow: 0px 0px 13px #663399; 
+    box-shadow: 0px 0px 13px #1EA075; 
     transition: 100ms ease-in-out;
 }
 .info_button{
@@ -360,7 +365,7 @@ body {
     height: 40px;
     align-self: flex-end;
     width: 100%;
-    background-color: #663399;
+    background-color: #1EA075;
     border: 0px;
 }
 .background {
@@ -432,30 +437,31 @@ body {
     display: flex;
     font-size: 11px;
     color:#fff;
-    height: 200px;
+    height: 250px;
     font-family: roboto,sans-serif;
     width:100%;
-    background-color: black;
     flex-wrap: wrap;
-    position: relative;
-    bottom: 0px;
+    justify-content: space-around;
+    background-color: black;
 }
 .wrap_one{
     display: flex;
     Width:50%;
     align-items: center;
-    padding: 30px 30px 10px;
-    border-right:  1px solid rgba(255,255,255,0.1);
+    padding: 30px;
+    height: 200px;
+/*    border-right:  1px solid rgba(255,255,255,0.1);*/
     flex-direction: column;
 }
 .wrap_two{
     
     display: flex;
     Width:50%;
-    padding: 30px 30px 10px;
-    
+    height: 200px;
+    padding: 20px;
     flex-direction: column;
 }
+
 .wrap_two ul{
     list-style-type: none;
     margin: 5px;
