--- a/css/body.css
+++ b/css/body.css
@@ -6,11 +6,11 @@
     padding: 0px;
 }
 
-/*
+
 *{ 
     box-shadow: 0px 0px 0px 1px black;
 }
-*/
+
 
 
 
@@ -30,7 +30,7 @@ body p{
 
 
                     /*News Bulletin*/
-.bulletin{
+/* .bulletin{
     visibility: hidden;
     position: absolute;
     display: flex;
@@ -45,69 +45,72 @@ body p{
     height: 30px;
     color: #fff;
     background-color: #339933;
-}
+} */
 
                     /*Main body*/
 
                     /*Cover section*/
 .cover_section{
-    position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     height: 400px;
-    margin-top: 60px;
     width: 100%;
+    background-color: #eee;
 }
 
-.cover_img{
+/* .cover_img{
     width: 100%;
     height: 400px;
     background-color: #eee;
-/*    background :url("../images/cover.jpg");*/
+    background :url("../images/cover.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-}
+}  */
 
-.overlay {
+
+/* .overlay {
     display: flex;
     width:100%;
     height: 400px;
     align-items: center;
     justify-content: center;
-}
+} */
 
                     /*Cover-container*/
-.card_container{
+/* .card_container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-/*    border: 5px solid #663399;*/
-/*    padding :20px;*/
-/*    border-radius: 10px; */
+    border: 5px solid #663399;
+    padding :20px;
+    border-radius: 10px; 
     width: 100%;
     height: 100%;
-/*    box-shadow: 0px 0px 15px #000;*/
+    box-shadow: 0px 0px 15px #000; 
     background-color: rgba(0,0,0,0.8);
-}
+} */
 
-.card_container h1{
+.cover_section h1{
 /*    font-weight: 700;*/
-    margin: 20px 0px;
+    margin: 30px 0px;
     padding: 0px;
     font-family: "lobster", sans-serif;
 /*    line-height: 1.5;*/
 /*    letter-spacing: 2px;*/
-    color: #fff;
-    
+    color: #000;
 }
-.card_container p{
+/* .cover_section p{
 
     color: #999999;
     font-weight: 500;
     line-height: 1.3;
     margin-bottom: 20px;
-}
-.card_container a:hover{
+} */
+.cover_section a:hover{
     text-decoration: none;
     color:#fff;
 }
@@ -116,129 +119,23 @@ body p{
     display: flex;
     justify-content: center;
     align-items: center;
-    align-self: center;
-    background-color: #1EA075;
+    background-color: rgb(30, 160, 115);
     border: 0px;
     height: 40px;
-    width: 160px;
-/*
-    border-bottom-right-radius: 7px;
-    border-bottom-left-radius: 7px;
-*/
+    width: 180px;
+    padding: 5px;
+    border-radius: 3px;
     align-self: center;
     color: #fff;
 }
+
 .get_started:hover{
     transition: 200ms all ease-out;
-    width: 190px;
+    width: 200px;
+    background-color: rgb(20, 120, 85);
 }
-
-
-
 
             /*Signup*/
-.connection_section{
-    display: flex;
-    width: 100%;
-    border-radius: 10px;
-    background-color: #fff;
-    padding: 10px 10px 10px;
-    flex-direction: column;
-    padding: 20px;
-/*    flex-wrap: wrap;*/
-}
-
-.signup_form_header{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: flex-start;
-    margin-bottom: 30px;
-}
-
-.signup_form_heading{
-    font-family: "staatliches","arial",sans-serif;
-    text-transform: uppercase;
-}
-.signup_form_heading h2{
-    letter-spacing: 1px;
-    margin: 0px;
-    padding: 0px;
-}
-.signup_form_subheading{
-    color: #663399;
-}
-.signup_form_subheading p{
-    padding: 0px;
-    margin: 0px;
-}
-
-
-.signup_form_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.signup_form_container .signup_textbox{
-    border: 1px solid #663399;
-    border-radius: 4px;
-    height: 2rem;
-    padding-left: 8px;
-    font-size: 0.9rem;
-    margin-bottom: 15px;
-}
-
-.signup_form_caption{
-    text-transform:uppercase;
-    width: 100%;
-}
-
-.signup_box_row{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
-.signup_form_container .w50{
-    width: 49%;   
-}
-.signup_form_container .w100{
-    width: 100%;
-}
-
-.signup_submit_button{
-    display: flex;
-    align-content: center;
-    align-self: center;
-    justify-content: center;
-    width: 100px;
-    height: 35px;
-    border-radius: 6px;
-    margin-top: 20px;
-    background-color: #663399;
-    color: #fff;
-    border: 0px;
-}
-
-.signup_submit_button:hover{
-    border: 2px solid #663399; 
-    background-color: transparent;
-    color: #663399;
-}
-
-.signup_form_container p{ 
-    margin-top: 10px;
-}
-.signup_form_container a:hover{ 
-    text-decoration: none;
-     color: #663399 ;
-}
-
-
-
 
                             /*Tab*/
 
@@ -267,9 +164,9 @@ body p{
     width: 50%;
     padding-left: 7px;
 }
-.tab .categorybox{  
+/* .tab .categorybox{  
 
-}
+} */
 .tab .searchbox{
     border-left: 0px;
 }
