--- a/css/body.css
+++ b/css/body.css
@@ -18,7 +18,7 @@
 body {
     background-color: #999999;
     box-sizing: border-box;
-    font-family: "poppins", sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
     cursor: default;
 }
 
@@ -98,7 +98,7 @@ body p{
 /*    font-weight: 700;*/
     margin: 30px 0px;
     padding: 0px;
-    font-family: "lobster", sans-serif;
+    font-family: 'Lobster', cursive;
 /*    line-height: 1.5;*/
 /*    letter-spacing: 2px;*/
     color: #000;
@@ -195,7 +195,7 @@ body p{
 .categories{
     display: flex;
     position: relative;
-    height: auto;
+    height: 100%;
     width:100%;
     flex-direction: column;
     background-color: rgba(0,0,0,0.1);
@@ -266,6 +266,7 @@ body p{
     border: 0px;
 }
 .background {
+    background-color: #fff;
     padding: 30px 10px 30px;
     height: auto;
     width: 100%;
