--- a/css/body.css
+++ b/css/body.css
@@ -141,13 +141,13 @@ body p{
 
 
 .tab_section{
-    position: relative;
+/*    position: relative;*/
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
 /*    padding: 10px;*/
-    height: 70px;
+    height: 50px;
 }
 
 .tab {
@@ -160,15 +160,15 @@ body p{
 }
 
 .tab .input {
-    border: 8px solid #1EA075;
-    width: 50%;
-    padding-left: 7px;
+    border: 0px solid #1EA075;
+    width: 80%;
+    padding: 2px 5px;
 }
 /* .tab .categorybox{  
 
 } */
 .tab .searchbox{
-    border-left: 0px;
+/*    border-left: 0px;*/
 }
 .searchbar .search_logo {
     padding: 5px;
