--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,35 @@
+                    /*Resetting*/
+*::after,
+*::before{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
+/*
+*{ 
+    box-shadow: 0px 0px 0px 1px black;
+}
+*/
+
+                    /*Global*/
+body {
+    background-color: black;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif !important;
+    color : #000;
+    cursor: default;
+}
+body p{
+    margin: 0px;
+    padding: 0px;
+}
 
 
+/*navigation bar*/
 .nav-bg-color{
     background-color: #1EA075;
 }
-
 /*
 .circle{
     position: absolute;
@@ -27,27 +53,22 @@
     overflow: hidden;
     margin: 10px 0px 10px;
 }
-
 .search .first_wrap{
     flex: 1;
 }
-
 .search .second_wrap{
     width: 30px;
 }
-
 .SB{
     border: none;
     width: 100%;
 }
-
 .icon{
     
     padding: 5px 5px 5px;
     width:30px;
     height: 100%;
 }
-
 
 /*
 .fmodal{
@@ -62,7 +83,6 @@
     overflow: hidden; 
 }
 */
-
 /*
 .fmodal-dialog {
     padding: 30px;
@@ -75,7 +95,6 @@
     margin: auto;
 }
 */
-
 /*
 .close_model{
     background-color: #663399;
@@ -93,15 +112,72 @@
     color: #fff !important;
     border: transparent !important;
 }
-
 .navbar-toggler:hover{
     background-color: #2E9080 !important;
 }
-
-.navbar-toggler-icon:hover{
-}
-
 .dropdown-menu a:hover{
     border-left:5px solid #1EA075;
     padding-right: -3px;
+}
+
+/*footer*/
+
+.page_footer{
+    position: relative;
+    display: flex;
+    font-size: 0.7em;
+    color:#fff;
+    height: 250px;
+    font-family: roboto,sans-serif;
+    width:100%;
+    flex-wrap: wrap;
+    background-color: black;
+}
+.wrap_one{
+    display: flex;
+    Width:50%;
+    height: 200px;
+    
+    align-items: center;
+    padding: 20px;
+    border-right:  1px solid rgba(255,255,255,0.1);
+    flex-direction: column;
+}
+.wrap_two{
+    
+    display: flex;
+    Width:50%;
+    height: 200px;
+    
+    align-items: center;
+    padding: 20px;
+    flex-direction: column;
+}
+.page_footer ul{
+    list-style-type: none;
+    margin: 5px;
+    padding: 0px 8px;
+    font-weight: 200;
+}
+.wrap_three{
+    display: flex;
+    width:100%;
+    height: 50px;
+    padding: 10px;
+    border-top: 1px solid rgba(255,255,255,0.1);
+    align-items: center;
+    justify-content: center;
+}
+.fcaption{
+    font-weight: bold;
+    margin-bottom: 20px;
+    width: 100%;
+    letter-spacing: 1px;
+}
+.fcaption a{
+    color: #fff;
+}
+.fcaption a:hover{
+    color: #1EA075;
+    text-decoration: none;
 }
