--- a/css/signup.css
+++ b/css/signup.css
@@ -19,7 +19,7 @@
     margin-bottom: 30px;
 }
 .heading{
-    font-family: "staatliches","arial",sans-serif;
+    font-family: 'Staatliches', cursive;
     text-transform: uppercase;
 }
 
