--- a/css/index.css
+++ b/css/index.css
@@ -48,7 +48,7 @@
     flex-direction: column;
     
     background-image:linear-gradient(135deg,hsla(120,80%,30%,0.7)50%,hsla(120,80%,30%,0.2));
-
+} 
 
 .w90{
     display: flex;
