--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@
     width: 100%;
     height: 100%;
     color: #fff;
-    background-image : url("../images/cover.jpg");
+    background-image : url("../images/cover_low.jpg");
     background-position: center;
     background-color: blue;
     background-size: cover;
