--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@
     
     background-image:linear-gradient(135deg,hsla(120,80%,30%,0.7)50%,hsla(120,80%,30%,0.2));
 
-
+}
 .w90{
     display: flex;
     flex-direction: column;
