--- a/css/index.css
+++ b/css/index.css
@@ -30,9 +30,9 @@
     width: 100%;
     height: 100%;
     color: #fff;
-    background-image : url("../images/cover.jpg");
+    background-image : url("../images/cover_low.jpg");
     background-position: center;
-    background-color: blue;
+    background-color: rgba(0,0,0,0.8); 
     background-size: cover;
     background-repeat: no-repeat;
 }
