--- a/css/global.css
+++ b/css/global.css
@@ -16,7 +16,17 @@
 body {
     background-color: black;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif !important;
+/*font-family: 'Poppins', sans-serif ;*/
+/*font-family: 'Bebas Neue', sans-serif*/
+/*font-family: 'Carter One', sans-serif*/
+/*font-family: 'Josefin Sans', sans-serif*/
+/*font-family: 'Lobster', cursive*/
+/*font-family: 'Montserrat', sans-serif*/
+/*font-family: 'Open Sans', sans-serif*/
+/*font-family: 'Oswald', sans-serif*/
+/*font-family: 'Righteous', sans-serif*/
+    font-family: 'Lato', sans-serif
+    !important;
     color : #000;
     cursor: default;
 }
