--- a/css/index.css
+++ b/css/index.css
@@ -68,15 +68,14 @@
 
 .c_header h1{
     font-family: 'Lobster', cursive;
+/*    font-family: 'Carter One', cursive;*/
     text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
 }
-
 .c_header p{
     font-size: 1em;
     line-height: 1.3;
     margin-top: 10px;
 }
-
 .c_subheader p{
     font-size: 0.7em;
     color: #fff;
@@ -107,12 +106,9 @@
     background-color: hsla(350,70%,50%,1);
     color:#fff !important;
 }
-
 .c_button:hover > a{
     color:#fff ;
 }
-
-
 .c_button a{
     font-weight: bold;
     color: #000;
@@ -121,6 +117,8 @@
 .c_button a:hover{
     text-decoration: none;
 }
+
+
          /*Search tab*/
 
 .tab_section{
@@ -132,11 +130,49 @@
     align-items: center;
     background-color: hsla(350,70%,50%,1);
 }
-.tab .input {
-    border: 0px solid #1EA075;
-    padding: 2px 15px;
-    border-radius: 4px;
+
+.tab_container{
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    color: #fff;
 }
+
+.search_text{
+    display: flex;
+    background-color: hsla(350,70%,35%,1);
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 100%;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.search_text:hover{
+    background-color: hsla(350,70%,25%,1);
+}
+
+.searchbox_container{
+/*   background-color: aqua;*/
+    max-width: 300px;
+    flex: 1;
+    margin-left: 10px;
+    height: 100%;
+    display: flex;
+}
+
+.searchbox_container .input {
+    width:100%;
+    height: 100%;
+    border: 0px solid #1EA075;
+    padding: 0px 9px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+
 /* .tab .categorybox{  
 
 } */
@@ -151,6 +187,28 @@
     height: auto;
 }
 */
+
+.search_icon_container{
+    display: flex;
+    height: 100%;
+    width: 30px;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+.search_icon{
+    background-image: url("../icons/search.svg");
+    fill:#fff;
+    height: 25px;
+    width: 25px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+
+
 
                   /*Categories*/
 .categories_section{
@@ -182,7 +240,6 @@
     justify-content: space-around;
 /*    background-color: yellow;*/
 }
-
 
 .thumbs{
     display: flex;
@@ -283,8 +340,8 @@
 */
 
 /*Resposive*/
-
 @media all and (min-width: 600px) {
+    
 }
 /*Desktop*/
 @media all and (min-width: 900px) {
