--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
+/*Global*/
+:root{
+    --pcolor:hsla(350,70%,50%,1);
+    --pcolordark:hsla(350,70%,35%,1);
+    --pcolordarker:hsla(350,70%,30%,1);
+    --scolor:hsla(43,90%,50%,1);
+}
+
+
 /*News Bulletin*/
 
 /* .bulletin{
@@ -73,6 +82,7 @@
 }
 .c_header p{
     font-size: 1em;
+/*    color: var(--pcolor);*/
     line-height: 1.3;
     margin-top: 10px;
 }
@@ -92,7 +102,7 @@
     height: 40px;
     
     font-size: 0.9em;
-    background-color: hsla(43,90%,50%,1);
+    background-color: var(--scolor);
     display: flex;
     align-self: flex-end;
     justify-content: center;
@@ -103,18 +113,15 @@
     border-radius: 5px;
 }
 .c_button:hover{
-    background-color: hsla(350,70%,50%,1);
-    color:#fff !important;
+    background-color: var(--pcolor);
 }
 .c_button:hover > a{
     color:#fff ;
+    text-decoration: none;
 }
 .c_button a{
     font-weight: bold;
     color: #000;
-    text-decoration: none;
-}
-.c_button a:hover{
     text-decoration: none;
 }
 
@@ -125,10 +132,10 @@
     position: relative;
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 60px;
     justify-content: center;
     align-items: center;
-    background-color: hsla(350,70%,50%,1);
+    background-color: var(--pcolor);
 }
 
 .tab_container{
@@ -142,7 +149,7 @@
 
 .search_text{
     display: flex;
-    background-color: hsla(350,70%,35%,1);
+    background-color: var(--pcolordark);
     justify-content: center;
     align-items: center;
     width: 80px;
@@ -152,25 +159,25 @@
 }
 
 .search_text:hover{
-    background-color: hsla(350,70%,25%,1);
+    background-color: var(--pcolordarker);
 }
 
 .searchbox_container{
 /*   background-color: aqua;*/
     max-width: 300px;
     flex: 1;
-    margin-left: 10px;
+/*    margin-left: 10px;*/
+   
     height: 100%;
     display: flex;
 }
 
-.searchbox_container .input {
+.searchbox_container .input{
     width:100%;
     height: 100%;
     border: 0px solid #1EA075;
     padding: 0px 9px;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
+    
 }
 
 /* .tab .categorybox{  
@@ -191,17 +198,21 @@
 .search_icon_container{
     display: flex;
     height: 100%;
-    width: 30px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    width: 40px;
     justify-content: center;
     align-items: center;
+    border-right: 1px solid var(--pcolor);
     color: #fff;
+    background-color: rgba(255,255,255,1);
 }
 
 .search_icon{
     background-image: url("../icons/search.svg");
     fill:#fff;
-    height: 25px;
-    width: 25px;
+    height: 18px;
+    width: 18px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -249,10 +260,11 @@
     padding: 4px;
     background-color: #fff;
 /*    border-radius: px ;*/
-    box-shadow: 0px 0px 8px 0px gray; 
+    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.3); 
     flex-direction: column;
     justify-content: space-between
 }
+
 .thumbs:hover{
     transform: scale(1.03);
     transition: 100ms ease-in-out;
@@ -278,7 +290,7 @@
     color: #fff;
     height: 40px;
     width: 100%;
-    background-color: hsla(350,70%,50%,1);
+    background-color: var(--pcolor);
 }
 
 /*
