--- a/css/signup.css
+++ b/css/signup.css
@@ -1,3 +1,11 @@
+:root{
+    --pcolor:hsla(350,70%,50%,1);
+    --pcolordark:hsla(350,70%,35%,1);
+    --pcolordarker:hsla(350,70%,30%,1);
+    --scolor:hsla(43,90%,50%,1);
+}
+
+
 .body_section{
     position: relative;
     display: flex;
@@ -27,7 +35,7 @@
     letter-spacing: 1px;
     font-weight: bold;
     margin: 0px;
-    color: hsla(350,70%,50%,1);
+    color: var(--pcolor);
     padding: 0px;
 }
 .heading p{
@@ -38,6 +46,7 @@
 .fcontainer{
     display: flex;
     width: 100%;
+/*    padding: 10px;*/
 /*    background-color: green;*/
     flex-direction: column;
     justify-content: center;
@@ -49,7 +58,7 @@
     width: 100%;
 }
 .fcontainer .textbox{
-    border: 1px solid hsla(350,70%,50%,1);;
+    border: 1px solid var(--pcolor);
     border-radius: 4px;
     height: 2rem;
     padding-left: 8px;
@@ -79,40 +88,27 @@
     height: 40px;
     border-radius: 6px;
     margin-top: 20px;
-    background-color: hsla(350,70%,50%,1);
+    background-color: var(--pcolor);
     color: #fff;
     border: 0px;
 }
 .button:hover{
-    border: 2px solid hsla(350,70%,50%,1); 
+    border: 2px solid var(--pcolor); 
     background-color: transparent;
-    color: hsla(350,70%,50%,1);
+    color: var(--pcolor);
 }
 
 .fcontainer p{ 
     font-size: 0.9rem;
     margin-top: 10px;
 }
+
 .fcontainer a{
 /*    font-style: italic;*/
-    color: hsla(350,70%,50%,1) !important;
+    color: var(--pcolor) !important;
     cursor: pointer;
     font-weight: bold;
-    
 }
-
-
-
-/* New */
-
-
-
-
-
-
-
-
-
 
 
 /*Tablet*/
