--- a/css/login.css
+++ b/css/login.css
@@ -9,90 +9,109 @@
 .body_section{
     position: relative;
     display: flex;
-    height: 500px;
     width: 100%;
-    padding: 20px ;
+    height: 450px;
+    padding: 20px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-   
-.headings{
+} 
+.fheader{
     display: flex;
+    flex-direction: column;
     width: 100%;
-    text-transform: uppercase;
+    height: 80px;
     justify-content: center;
     align-items: center;
-    margin: 0px 0px 40px;
+    margin-bottom: 00px;
 }
-
-.headings h2{
+.heading{
+    font-family: 'Staatliches', sans-serif;
+    text-transform: uppercase;
+/*    border-bottom: 2px solid var(--pcolor);*/
+}
+.heading h2{
+    letter-spacing: 1px;
     font-weight: bold;
     margin: 0px;
+    color: var(--pcolor);
     padding: 0px;
 }
 
-.f_container{
-    border: 1px solid #999999;
+.fcontainer{
+    display: flex;
+    width: 300px;
+    
+    border: 0px solid var(--pcolor);
     border-radius: 5px;
     padding: 20px;
-    background-color: #CCCCCC;
+    
+    background: linear-gradient(var(--pcolor),var(--pcolordark));
 /* */
-    display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60%;
+/*    justify-content: space-between;*/
 }
 
-.f_container .textbox{
-    border: 1px solid #999999;
-    width: 100%;
-    border-radius: 4px;
-    height: 2rem;
-    padding-left: 8px;
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-}
-
-.caption{
-    text-transform:uppercase;
-    width: 100%;
-}
 .row{
     display: flex;
     width: 100%;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 15px;
+/*    flex-direction: column;*/
 }
+.fcontainer .caption{
+    color: #fff;
+    width: 100%;
+    display: flex;
+    margin-bottom: 3px;
+    align-content: center;
+/*    justify-content: center;*/
+}
+.fcontainer .textbox{
+    border: 0px solid var(--pcolor);
+    border-radius: 3px;
+    height: 2rem;
+    padding: 0px 8px;
+    font-size: 0.8rem;
+}
+
+.fcontainer .w50{
+    width: 49%;   
+}
+.fcontainer .w100{
+    width: 100%;
+}
+
 .button{
-   
     display: flex;
     align-content: center;
     justify-content: center;
-    width: 100px;
-    height: 30px;
+    width: 120px;
+    height: 40px;
     border-radius: 6px;
     margin-top: 20px;
-    background-color: #663399;
+    background-color: var(--pcolor);
     color: #fff;
     border: 0px;
 }
 .button:hover{
-    border: 2px solid #663399; 
+    border: 2px solid var(--pcolor); 
     background-color: transparent;
-    color: #663399;
+    color: var(--pcolor);
 }
 
-.f_container p{ 
+.body_section p{ 
     font-size: 0.9rem;
     margin-top: 10px;
 }
-
-.f_container a{
+.body_section a{
 /*    font-style: italic;*/
-    color: #663399 !important;
+    color: var(--pcolor) !important;
     cursor: pointer;
     font-weight: bold;
-    
 }
 
 /*Tablet*/
