--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,10 @@
     justify-content: space-around;
     align-items: center;
 /*    background-color: chartreuse;*/
+   
+}
+.c_subheader a:hover{
+   text-decoration: none;
 }
 
 .c_header h1{
@@ -103,6 +107,7 @@
 .c_header p{
     font-size: 1em;
 /*    color: var(--pcolor);*/
+/*    opacity: 0.6;*/
     line-height: 1.3;
     margin-top: 10px;
 }
@@ -134,8 +139,7 @@ justify-content: flex-end;
     margin: 8px 0px;
     border-radius: 5px;
 }
-
-.c_button a{
+.c_button p{
     font-weight: bold;
     text-decoration: none;
 }
@@ -145,13 +149,13 @@ justify-content: flex-end;
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.6);
     border: 0px;
 }
-.signin_button a{
+.signin_button p{
     color:#000;
 }
 .signin_button:hover{
     background-color: var(--pcolor);
 }
-.signin_button:hover > a{
+.signin_button:hover > p{
     color:#fff ;
     text-decoration: none;
 }
@@ -160,13 +164,13 @@ justify-content: flex-end;
     background-color: transparent;
     border: 2px solid var(--scolor);
 }
-.login_button a{
+.login_button p{
     color:var(--scolor);
 }
 .login_button:hover{
     border-color: var(--success_color);
 }
-.login_button:hover > a{
+.login_button:hover > p{
     color: var(--success_color);
     text-decoration: none;
 }
