--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@
     color: #fff;
     background-color: #339933;
 } */
-
+ 
                 /*Cover section*/
 .cover_section{
     position: relative;
@@ -278,7 +278,7 @@ justify-content: flex-end;
     align-items: center;
 /*    height:700px;*/
     width: 100%;
-    height: 750px;
+    height: 1200px;
     flex-direction: column;
 /*    background-color: red;*/
 }
@@ -306,9 +306,9 @@ justify-content: flex-end;
     width: 100%;
     height: 100%;
     
-    grid-template-columns:160px 160px 160px;
+    grid-template-columns: 140px 140px;
     
-    grid-template-rows:200px 200px 200px;
+    grid-template-rows:180px 180px 180px 180px 180px;
     
     justify-items:center;
     align-items:center;
