--- a/css/signup.css
+++ b/css/signup.css
@@ -10,24 +10,54 @@
     position: relative;
     display: flex;
     width: 100%;
-    height: 600px;
+    height: 700px;
     padding: 20px;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+/*    background-color: aqua;*/
+    background-image: url("../images/signup_bg.jpg");
+    background-size: cover;
+    opacity: 1;
+    background-position: center;
+}
+
+.fcontainer_outer{
+    display: flex;
+    padding: 20px;
+    min-width:300px; 
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.8);
+    background-color:rgba(255,0,0,0.13);
+    border-radius: 15px;
     justify-content: center;
     align-items: center;
 }
+.fcontainer{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+
 .fheader{
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 80px;
+/*     background-color: rgba(0,0,0,0.4);*/
     justify-content: center;
+    padding-bottom: 10px;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid var(--pcolor);
 }
 .heading{
     font-family: 'Staatliches', sans-serif;
-    text-transform: uppercase;
+/*    text-transform: uppercase;*/
 }
 .heading h2{
     letter-spacing: 1px;
@@ -40,9 +70,18 @@
     padding: 0px;
     margin: 0px;
 }
-.fcontainer{
+.heading a{
+/*    font-style: italic;*/
+    color: var(--pcolor) !important;
+    cursor: pointer;
+/*    font-weight: bold;*/
+}
+
+
+.inner_container{
     display: flex;
     width: 100%;
+    padding: 15px;
 /*    padding: 10px;*/
 /*    background-color: green;*/
     flex-direction: column;
@@ -59,39 +98,33 @@
 /*    flex-direction: column;*/
     margin-bottom: 15px;
 }
-.fcontainer .caption{
+.inner_container .caption{
     width: 100%;
     margin-bottom: 3px;
     display: flex;
     align-content: center;
 }
-.fcontainer .textbox{
+.inner_container .textbox{
     border: 1px solid var(--pcolor);
     border-radius: 3px;
     height: 2rem;
     padding: 0px 8px;
     font-size: 0.8rem;
+    background-color: rgba(0,0,0,0.0);
     box-shadow:inset 0px 0px 3px 0px rgba(0,0,0,0.5);
 }
 
-/*
-.fcontainer .textbox:hover{
-    box-shadow:inset 0px 0px 8px 0px var(--pcolor);
-}
-*/
-.fcontainer .textbox:focus{
+.inner_container .textbox:focus{
     box-shadow:0px 0px 8px 0px var(--pcolor);
 }
-
-.fcontainer .textbox:focus{
+.inner_container .textbox:focus{
     outline: 0px;
 }
 
-
-.fcontainer .w50{
+.inner_container .w50{
     width: 49%;   
 }
-.fcontainer .w100{
+.inner_container .w100{
     width: 100%;
 }
 
@@ -118,25 +151,18 @@
     outline: 0px;
 }
 
-.fcontainer p{ 
+.inner_container p{ 
     font-size: 0.9rem;
     margin-top: 10px;
-}
-
-.heading a{
-/*    font-style: italic;*/
-    color: var(--pcolor) !important;
-    cursor: pointer;
-/*    font-weight: bold;*/
 }
 
 
 /*Tablet*/
 
 @media all and (min-width: 600px) {
-.fcontainer{
-    width:300px;
-}
+    .fcontainer{
+        
+    }
 }
 
 /*Desktop*/
