--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,7 @@
                     /*Resetting*/
 *::after,
 *::before{
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
@@ -22,6 +23,7 @@
 
 body {
     background-color: black;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 /*font-family: 'Poppins', sans-serif ;*/
 /*font-family: 'Bebas Neue', sans-serif*/
@@ -44,6 +46,12 @@ body p{
 
 
 /*navigation bar*/
+.navbar{
+    position: absolute !important;
+    z-index: 999999;
+    width: 100%;
+}
+
 .nav-bg-color{
     background-color: var(--pcolor);
 }
@@ -59,9 +67,15 @@ body p{
 }
 */
 .search{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background-color:#fff;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     width: 100%;
     height: 30px;
@@ -71,6 +85,8 @@ body p{
     margin: 10px 0px 10px;
 }
 .search .first_wrap{
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
 }
 .search .second_wrap{
@@ -158,33 +174,56 @@ color:rgba(255,255,255,1) !important;
 
 .page_footer{
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-size: 0.7em;
     color:#fff;
     height: 250px;
     font-family: roboto,sans-serif;
     width:100%;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     background-color: black;
 }
 .wrap_one{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     Width:50%;
     height: 200px;
+    
+    -webkit-box-align: center;
+    
+    -ms-flex-align: center;
     
     align-items: center;
     padding: 20px;
     border-right:  1px solid rgba(255,255,255,0.1);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 .wrap_two{
+    
+    display: -webkit-box;
+    
+    display: -ms-flexbox;
     
     display: flex;
     Width:50%;
     height: 200px;
     
+    -webkit-box-align: center;
+    
+    -ms-flex-align: center;
+    
     align-items: center;
     padding: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 .page_footer ul{
@@ -194,12 +233,18 @@ color:rgba(255,255,255,1) !important;
     font-weight: 200;
 }
 .wrap_three{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width:100%;
     height: 50px;
     padding: 10px;
     border-top: 1px solid rgba(255,255,255,0.1);
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 .fcaption{
