--- a/css/password_reset.css
+++ b/css/password_reset.css
@@ -1,98 +1,208 @@
+:root{
+    --pcolor:hsla(350,70%,50%,1);
+    --pcolordark:hsla(350,70%,35%,1);
+    --pcolordarker:hsla(350,70%,30%,1);
+    --scolor:hsla(43,90%,50%,1);
+}
+
 .body_section{
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
-    height: 500px;
-    padding: 20px ;
-    flex-direction: column;
+    height: 550px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    margin-top: 60px;
+    background-color: #fff;
 }
+ 
 
-main p{
-    font-size: 1.5rem;
+.fcontainer{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 20px;
+    width: 300px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 5px;
+     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6); 
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);
+}
+ 
+
+.fheader{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    height: 60px;
+/*     background-color: rgba(0,0,0,0.4);*/
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding-bottom: 10px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+/*    margin-bottom: 10px;*/
+}
+.heading{
+/*    font-family: 'Staatliches', sans-serif;*/
+/*    text-transform: uppercase;*/
+}
+.heading p{
+/*    letter-spacing: 1px;*/
+    font-weight: bold;
     margin: 0px;
+    color: var(--pcolor);
     padding: 0px;
 }
 
-.headings{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0px 20px;
-}
 
-.headings p{
-    margin: 0px;
-    padding: 0px;
-}
-
-.f_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    margin-top:40px;
-}
-
-.f_container .textbox{
-    border: 1px solid #663399;
-    width: 100%;
-    border-radius: 4px;
-    height: 2rem;
-    padding-left: 8px;
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-}
 
 .caption{
-    text-transform:uppercase;
     width: 100%;
+    line-height: 1.7em;
+    font-size: 0.9em;
+/*    margin-bottom: 9px;*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-line-pack: center;
+    align-content: center;
 }
-.row{
+
+.inner_container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
-    justify-content: space-between;
+/*    padding: 15px;*/
+/*    padding: 10px;*/
+/*    background-color: green;*/
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
+.inner_container .textbox{
+    border: 1px solid var(--pcolor);
+    border-radius: 3px;
+    height: 2rem;
+    padding: 0px 8px;
+    font-size: 0.8rem;
+    background-color: rgba(0,0,0,0.0);
+    -webkit-box-shadow:inset 0px 0px 3px 0px rgba(0,0,0,0.5);
+    box-shadow:inset 0px 0px 3px 0px rgba(0,0,0,0.5);
+}
+
+.inner_container .textbox:focus{
+    -webkit-box-shadow:0px 0px 8px 0px var(--pcolor);
+    box-shadow:0px 0px 8px 0px var(--pcolor);
+}
+.inner_container .textbox:focus{
+    outline: 0px;
+}
+
+.inner_container .w50{
+    width: 49%;   
+}
+.inner_container .w100{
+    width: 100%;
+}
+
+
+.row{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+/*    flex-direction: column;*/
+    margin: 5px 0px;
+}
 
 .button{
+   
+    display: -webkit-box;
+   
+    display: -ms-flexbox;
+   
     display: flex;
+    -ms-flex-line-pack: center;
     align-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
-    width: 100px;
-    height: 30px;
+    width: 120px;
+    font-size: 0.9em;
+    height: 40px;
     border-radius: 6px;
     margin-top: 20px;
-    background-color: #663399;
+    background-color: var(--pcolor);
     color: #fff;
     border: 0px;
 }
-
 .button:hover{
-    border: 2px solid #663399; 
+    border: 2px solid var(--pcolor); 
     background-color: transparent;
-    color: #663399;
+    color: var(--pcolor);
 }
+
+.button:focus{
+    outline: 0px;
+}
+
 
 /*Tablet*/
 
 @media all and (min-width: 600px) {
-
-.f_container{
-width:300px;
-}
-
+    .fcontainer{
+        
+    }
 }
 
 /*Desktop*/
 @media all and (min-width: 900px) {
+    
 
+
+
+    
 }
-
-
-
